# TraversabilityMapping

./: CMakeLists.txt  README.md  accumulate_pointcloud.cpp  config.yaml  demo_inference.py  geometric_processing.cpp  map_representation.cpp  package.xml  pointXYZCustom.hpp  run_pipeline.sh  sem_geo_fusion.cpp
data_extraction/: extract_pointclouds.py  match_img2pointcloud.py  point_cloud_processor_node.cpp
evaluation/: evaluate_fusion.cpp  extract_xy_positions.py  visualize_map.py
